--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+package-lock.json
+package.json
+tsconfig.json
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
