--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es5",                                
-    "module": "commonjs",                         
+    "target": "es2015",                                                       
     "strict": true,                                
     "esModuleInterop": true,
     "skipLibCheck": true,                           
     "forceConsistentCasingInFileNames": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "outDir": "ts-built",
-    "rootDir": "scripts"
+    "rootDir": "scripts",
+    "outDir": "ts-built"
   }
 }
 
