--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/Ryabaa/match-match#readme",
   "devDependencies": {
+    "@types/node": "^16.10.2",
     "lite-server": "^2.6.1",
-    "typescript": "^4.3.2"
+    "typescript": "^4.4.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "navigo": "^8.11.1"
+  },
+  "keywords": [],
   "description": ""
 }
