--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "typescript": "^4.4.3"
   },
   "keywords": [],
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "requirejs": "^2.3.6"
+  }
 }
